--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 /*  your css code here. If applicable */
-.card{
-	width:100px;
-	height:100px;
+.list{
+    text-wrap: nowrap;
+    overflow-x: scroll;
+    width:100%;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+.my-card{
+    width:180px;
+    margin-right:20px;
+    display: inline-block ;
+}
+.my-card>img{
+    margin:auto;
 }
